--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.19"
   }
 }
